--- a/requirements.txt
+++ b/requirements.txt
@@ -1,119 +1,28 @@
-﻿absl-py==2.3.1
-annotated-types==0.7.0
-anyio==4.10.0
-astunparse==1.6.3
-audioread==3.0.1
-bcrypt==4.3.0
-blinker==1.9.0
-cachelib==0.13.0
-certifi==2025.8.3
-cffi==1.17.1
-charset-normalizer==3.4.2
-click==8.2.1
-colorama==0.4.6
-gunicorn
-contourpy==1.3.2
-cycler==0.12.1
-decorator==5.2.1
-distro==1.9.0
-dnspython==2.7.0
-email-validator==2.3.0
-exceptiongroup==1.3.0
-fastapi==0.116.2
-fastapi-cli==0.0.12
-fastapi-cloud-cli==0.1.5
-Flask==3.1.1
-flask-cors==6.0.1
-Flask-Login==0.6.3
-Flask-PyMongo==3.0.1
-Flask-Session==0.8.0
-flatbuffers==25.2.10
-fonttools==4.59.0
-gast==0.6.0
-google-pasta==0.2.0
-grpcio==1.74.0
-h11==0.16.0
-h5py==3.14.0
-httpcore==1.0.9
-httptools==0.6.4
-httpx==0.28.1
-idna==3.10
-itsdangerous==2.2.0
-Jinja2==3.1.6
-jiter==0.10.0
-joblib==1.5.1
-keras==3.11.1
-kiwisolver==1.4.8
-lazy_loader==0.4
-libclang==18.1.1
-librosa==0.11.0
-llvmlite==0.44.0
-Markdown==3.8.2
-markdown-it-py==3.0.0
-MarkupSafe==3.0.2
-matplotlib==3.10.5
-mdurl==0.1.2
-ml_dtypes==0.5.3
-msgpack==1.1.1
-msgspec==0.19.0
-namex==0.1.0
-numba==0.61.2
-numpy==2.1.3
-openai==1.99.1
-opt_einsum==3.4.0
-optree==0.17.0
-orjson==3.11.3
-packaging==25.0
-pandas==2.3.1
-pillow==11.3.0
-platformdirs==4.3.8
-pooch==1.8.2
-protobuf==5.29.5
-pycparser==2.22
-pydantic==2.11.7
-pydantic-extra-types==2.10.5
-pydantic-settings==2.10.1
-pydantic_core==2.33.2
-pydub==0.25.1
-Pygments==2.19.2
-pymongo==4.13.2
-pyparsing==3.2.3
-python-dateutil==2.9.0.post0
-python-dotenv==1.1.1
-python-multipart==0.0.20
-pytz==2025.2
-PyYAML==6.0.2
-requests==2.32.4
-rich==14.1.0
-rich-toolkit==0.15.1
-rignore==0.6.4
-scikit-learn==1.7.1
-scipy==1.15.3
-seaborn==0.13.2
-sentry-sdk==2.38.0
-shellingham==1.5.4
-six==1.17.0
-sniffio==1.3.1
-soundfile==0.13.1
-soxr==0.5.0.post1
-SpeechRecognition==3.14.3
-starlette==0.48.0
-tensorboard==2.20.0
-tensorboard-data-server==0.7.2
-tensorflow==2.20.0
-tensorflow-io-gcs-filesystem==0.31.0
-termcolor==3.1.0
-threadpoolctl==3.6.0
-tqdm==4.67.1
-typer==0.17.4
-typing-inspection==0.4.1
-typing_extensions==4.14.1
-tzdata==2025.2
-ujson==5.11.0
-urllib3==2.5.0
-uvicorn==0.35.0
-watchfiles==1.1.0
-websockets==15.0.1
-Werkzeug==3.1.3
-wrapt==1.17.2
+# --- Web & sessions ---
+Flask>=3.0.0,<4
+Flask-Cors>=4.0.0,<5
+Flask-Login>=0.6.3,<0.7
+Flask-Session>=0.8.0,<0.9
+Flask-PyMongo>=2.3.0,<3
+pymongo[srv]>=4.7.0,<5
+bcrypt>=4.1.2,<5
+gunicorn>=21.2,<22
 
+# --- ML / audio stack ---
+# numpy 2.x is required for Python 3.12; librosa 0.10.2.post1 supports it.
+numpy>=2.0.0,<3
+scipy>=1.11,<2
+librosa>=0.10.2.post1,<0.11
+numba>=0.60,<1
+joblib>=1.3,<2
+soundfile>=0.12,<1
+SpeechRecognition>=3.10.3,<4
+
+# TensorFlow (CPU). Do NOT add tensorflow-io-gcs-filesystem here.
+tensorflow==2.20.0
+
+# --- OpenAI SDK ---
+openai>=1.40.0,<2
+
+# --- Optional dev convenience (loads .env locally; Render uses dashboard env vars) ---
+python-dotenv>=1.0.1,<2
